--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,85 @@
-* {
-    padding: 0;
-    margin: 0;
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600&display=swap');
+
+
+/* RESET */
+
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
     box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    /* line-height: 1.5; */
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+  /* END RESET */
+
+:root {
+/* Colors */
+
+/* Primary */
+--primary-moderate-violet: hsl(263, 55%, 52%) ;
+--primary-dark-grayish-blue: hsl(217, 19%, 35%) ;
+--primary-dark-blackish-blue: hsl(219, 29%, 14%);
+--primary-white: hsl(0, 0%, 95%) ;
+/* Neutral */
+--Neutral-Light-Gray:hsl(0, 0%, 81%) ;
+--Neutral-Light-Grayish-blue: hsl(210, 46%, 95%);
+/* Fonts */
+
 }
+
 
 body {
     width: 100vw;
     display: flex;
     justify-content: center;
+    font-family: "Barlow Semi Condensed", sans-serif;
 }
 
 .grid-container {
@@ -20,27 +92,31 @@ body {
     background-color: skyblue;
     border-radius: 10px;
     margin: 30px 0px;
-    padding: 40px 60px;
+    padding: 45px 80px;
 }
 
 .name-container {
     display: flex;
     width: 100%;
-    background-color: aliceblue;
     height: auto;
     flex-flow: row;
+    letter-spacing: 2px;
+}
+
+.name-container-text {
+    padding: 5px;
 }
 
 .image > img {
-    width: 60px;
+    width: 75px;
     border-radius: 50px;
     border: 1.5px solid purple;
 }
 
 .image {
-    width: 60px;
+    width:75px;
     padding: 5px;
-    margin-right: 40px;
+    margin-right: 25px;
 }
 
 .name {
@@ -50,6 +126,41 @@ body {
 }
 
 .subtext {
-    font-size: 1.5rem;
+   font-size: 1.5rem;
     display: block;
+}
+
+/* Grid Children */
+
+.grid-child-1 {
+    background-color: var(--primary-moderate-violet);
+    
+}
+
+.testimonial-container > .heading  {
+    color: var(--primary-white);
+    font-weight: 600;
+    letter-spacing: 0.025rem;
+}
+
+.testimonial-container > .testimonial  {
+    color: hsla(0, 0%, 100%, 0.500);
+    font-weight: 500;
+    }
+
+/* Testimonial Container */
+
+.testimonial-container {
+    margin-top: 40px; 
+}
+
+.heading {
+    display: block;
+    margin-bottom: 40px;
+    font-size: 2.5rem;
+}
+
+.testimonial {
+    display: block;
+    margin-bottom: 40px;
 }
