--- a/styles.css
+++ b/styles.css
@@ -74,212 +74,71 @@
 
 }
 
-
 body {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    font-family: "Barlow Semi Condensed", sans-serif;
-    background-color: var(--Neutral-Light-Grayish-blue);
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
 
 .grid-container {
-    max-width: 80vw;
-    /* padding: 80px 60px; */
-    margin-top: 80px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  max-height: 500px;
+  padding: 4rem 2rem;
+  gap: 2rem;
 }
 
 .grid-children {
-    max-width: auto;
-    background-color: skyblue;
-    border-radius: 20px;
-    padding: 45px 80px;
-    box-shadow: 0 0 10px 0.5px #00000017;
+  background-color: rgb(215, 135, 235);
+  padding: 1rem;
+}
+
+.profile-container {
+  display: flex;
+  width: 100%;
+}
+
+.grid-children {
+  border-radius: 10px;
 }
 
 
-.grid-children:nth-child(n+2):nth-child(-n+5) {
-    margin-top: 65px;
-}
+@media screen and (min-width: 1000px) {
 
-
-.name-container {
-    display: flex;
-    max-width: 100%;
-    height: auto;
-    flex-flow: row;
-    letter-spacing: 2px;
-}
-
-.name-container-text {
-   padding: 10px 0px; 
-}
-
-.image > img {
-    max-height: 100px;
-    border-radius: 50px;
-    border: 5px solid hsl(263, 68%, 67%);
-}
-
-.image {
-    max-height:100px;
-    padding: 5px;
-    margin-right: 25px;
-}
-
-.name {
-    font-weight: bold;
-    font-size:2em;
-    display: block;
-}
-
-.subtext {
-  margin-top: 7px;
-  font-size: 1.75rem;
-  display: block;
-}
-
-/* Grid Children 1 Testimonial container */
-
-.grid-child-1 {
-    background-color: var(--primary-moderate-violet);
-    
-}
-
-.grid-child-1 > .testimonial-container > .heading  {
-    color: var(--primary-white);
-    font-weight: 600;
-    letter-spacing: 0.025rem;
-}
-
-.grid-child-1 > .testimonial-container > .testimonial  {
-    color: hsla(0, 0%, 100%, 0.500);
-    font-weight: 500;
-    }
-
- /* Grid Children 1 Name container */
-.grid-child-1 > .name-container > .name-container-text > .name {
-  color: hsla(0, 0%, 100%, 0.76);
-}
-
-.grid-child-1 > .name-container > .name-container-text > .subtext {
-  color: hsla(0, 0%, 100%, 0.500);
-}
-
-/* Grid Child 2 */
-
-.grid-child-2 {
-  background-color: var(--primary-dark-grayish-blue);
-  
-}
-
-.grid-child-2 > .testimonial-container > .heading  {
-  color: var(--primary-white);
-  font-weight: 600;
-  letter-spacing: 0.025rem;
-}
-
-.grid-child-2 > .testimonial-container > .testimonial  {
-  color: hsla(0, 0%, 100%, 0.500);
-  font-weight: 500;
+  .grid-container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
   }
 
-/* Grid Children 2 Name container */
-.grid-child-2 > .name-container > .name-container-text > .name {
-color: hsla(0, 0%, 100%, 0.76);
 }
 
-.grid-child-2 > .name-container > .name-container-text > .subtext {
-color: hsla(0, 0%, 100%, 0.500);
-}
+@media screen and (min-width: 1200px) {
+  .grid-container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
+    max-width: 1600px;
+  }
 
-/* Grid Child 3 & 5 */
-.grid-child-3, .grid-child-5 {
-  background-color: rgb(255, 255, 255);
-  box-shadow: 5px;
-}
+  .grid-child-1 {
+    grid-column: 1 / 3;
+  }
 
-.grid-child-3, .grid-child-5 > .testimonial-container > .heading  {
-  color: var( --primary-dark-grayish-blue);
-  font-weight: 600;
-  letter-spacing: 0.025rem;
-}
+  .grid-child-2 {
+grid-column: 3 / 4;
+  }
 
-.grid-child-3, .grid-child-5 > .testimonial-container > .testimonial  {
-  color: hsla(217, 19%, 35%, 0.555);   
-}
+  .grid-child-3 {
+    grid-row: 2 / 3 ;
+    grid-column: 1 / 2;
+  }
 
-/* Grid Children 3 Name container */
-.grid-child-3, .grid-child-5 > .name-container > .name-container-text > .name {
-color: var(--primary-dark-grayish-blue);
-}
+  .grid-child-4 {
+    grid-column: 2 / 4;
+  }
 
-.grid-child-3, .grid-child-5 > .name-container > .name-container-text > .subtext {
-color: hsla(217, 19%, 35%, 0.658);
-}
-
-
-/* Grid Child 4 */
-.grid-child-4 {
-  background-color: var(--primary-dark-blackish-blue);
-  box-shadow: 5px;
-}
-
-.grid-child-4 > .testimonial-container > .heading  {
-  color: var(--primary-white);
-  font-weight: 600;
-  letter-spacing: 0.025rem;
-}
-
-.grid-child-4 > .testimonial-container > .testimonial  {
-  color: rgba(255, 255, 255, 0.308);   
-}
-
-/* Grid Children 4 Name container */
-.grid-child-4 > .name-container > .name-container-text > .name {
-color: var(--primary-white);
-}
-
-.grid-child-4 > .name-container > .name-container-text > .subtext {
-color: rgba(255, 255, 255, 0.473);
-}
-
-
-/* Testimonial Container */
-
-.testimonial-container {
-    margin-top: 40px; 
-}
-
-.heading {
-    display: block;
-    margin-bottom: 40px;
-    font-size: 2.5rem;
-}
-
-.testimonial {
-    display: block;
-    margin-bottom: 40px;
-}
-
-/* Media Queries */
-
-@media only screen and (min-width: 1200px) {
- 
- .grid-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 1fr;
-  gap: 1rem;
- }
-  
-.grid-child-1 {
-  grid-column-start: 1;
-  grid-column-end: 3 ;
-}
-
-
-
-
+  .grid-child-5 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+  }
 }
