--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
-  max-height: 500px;
+  /* max-height: 500px; */
   padding: 4rem 2rem;
   gap: 2rem;
 }
@@ -125,7 +125,7 @@ body {
   }
 
   .grid-child-2 {
-grid-column: 3 / 4;
+    grid-column: 3 / 4;
   }
 
   .grid-child-3 {
